[package]
name = "nal_ast"
version = "0.1.1"
authors = ["Hyeonu Park <nemo1275@gmail.com>"]

description = "Abstract syntax tree for Nal language"
homepage = "https://github.com/HyeonuPark/Nal"
documentation = "https://docs.rs/nal_ast"
repository = "https://github.com/HyeonuPark/Nal.git"
keywords = ["language", "ast"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[dependencies.codebuf]
path = "../codebuf"
version = "0.1"

[dev-dependencies]
serde_yaml = "0.7"
pretty_assertions = "0.3"
