[package]
name = "nal_ast"
version = "0.4.0"
authors = ["Hyeonu Park <nemo1275@gmail.com>"]

description = "Abstract syntax tree for Nal language"
homepage = "https://github.com/HyeonuPark/Nal"
documentation = "https://docs.rs/nal_ast"
repository = "https://github.com/HyeonuPark/Nal.git"
keywords = ["language", "ast"]
license = "MIT/Apache-2.0"

[dependencies]
internship = "0.3"
