[package]
name = "nal_check"
version = "0.1.0"
authors = ["Hyeonu Park <nemo1275@gmail.com>"]

description = "Code verifier for Nal language"
homepage = "https://github.com/HyeonuPark/Nal"
documentation = "https://docs.rs/nal_check"
repository = "https://github.com/HyeonuPark/Nal.git"
keywords = ["language", "ast"]
license = "MIT/Apache-2.0"

[dependencies]
nal_ast = { version = "0.1", path = "../nal_ast" }

lazy_static = "0.2"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_yaml = "0.7"
