[package]
name = "nal_eval"
version = "0.1.0"
authors = ["Hyeonu Park <nemo1275@gmail.com>"]

description = "Simple interpreter for Nal language"
homepage = "https://github.com/HyeonuPark/Nal"
documentation = "https://docs.rs/nal_eval"
repository = "https://github.com/HyeonuPark/Nal.git"
keywords = ["language", "interpreter"]
license = "MIT/Apache-2.0"

[dependencies.nal_ast]
path = "../nal_ast"
version = "0.1"

[dependencies]
owning_ref = "0.3"
