[package]
name = "nal_parser"
version = "0.1.0"
authors = ["Hyeonu Park <nemo1275@gmail.com>"]

description = "Parser for Nal language"
homepage = "https://github.com/HyeonuPark/Nal"
documentation = "https://docs.rs/nal_parser"
repository = "https://github.com/HyeonuPark/Nal.git"
keywords = ["language", "parser"]
license = "MIT/Apache-2.0"

[dependencies]
nom = "3.2"
nom_locate = "0.1"
lazy_static = "1.0"

[dependencies.codebuf]
path = "../codebuf"
version = "0.1"

[dependencies.nal_ast]
path = "../nal_ast"
version = "0.1"
